# personal-web

./: .gitignore  Dockerfile  docker-compose.prd.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  build_workflow.yml  deployment.yml  prebuild_workflow.yml  workflow.yml
.github/workflows/composite-action/: deploy.yml  tag.yml
.github/workflows/deploy/: action.yml
.github/workflows/prebuild/: action.yml
.github/workflows/tag/: action.yml
.nginx/: default.conf
kjellzijlemaker/: manage.py
kjellzijlemaker/kjellzijlemaker/: asgi.py  settings.py  urls.py  wsgi.py
kjellzijlemaker/personalwebsite/: apps.py  urls.py  views.py
kjellzijlemaker/personalwebsite/templates/: contact.html  footer.html  home.html  menu.html  my_page.html  resume.html
kjellzijlemaker/personalwebsite/tests/: test_urls.py
