[tool.poetry]
name = "kjellzijlemaker"
version = "0.1.0"
description = ""
authors = ["Kjell Zijlemaker <k.zijlemaker@amsterdam.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
