[tool.poetry]
name = "kjellzijlemaker"
version = "1.0"
description = ""
authors = ["Kjell Zijlemaker <k.zijlemaker@amsterdam.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
django = "4.2.10"
uvicorn = "0.23.2"
gunicorn = "21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
